/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";
message FM_DirListFileStats_t_pb
{

	required uint32 FileEntries = 1;
	required string DirName = 2;
	required uint32 DirEntries = 3;
}